--- a/common/header_home.html
+++ b/common/header_home.html
@@ -2,7 +2,7 @@
 
 <header>
   <div id="banner">
-    <img src="/common/logo.png" width="140" height="50" alt="Fegan Data Systems logo.">
+    <img src="logo.png" width="140" height="50" alt="Fegan Data Systems logo.">
 	<h1>Fegan Data Systems</h1>
   </div>
   
@@ -14,20 +14,20 @@
       <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
         <ul class="navbar-nav">		  
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="/software/software.html" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="../software/software.html" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Software
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-              <li><a class="dropdown-item" href="/software/software.html">Software</a></li>
-              <li><a class="dropdown-item" href="/software/chess/chess.html">Chess</a></li>
-              <li><a class="dropdown-item" href="/software/conway/conway.html">Conway</a></li>
+              <li><a class="dropdown-item" href="../software/software.html">Software</a></li>
+              <li><a class="dropdown-item" href="../software/chess/chess.html">Chess</a></li>
+              <li><a class="dropdown-item" href="../software/conway/conway.html">Conway</a></li>
             </ul>
           </li>
 		  <li class="nav-item active">
-		    <a class="nav-link" href="/about/about.html">About</a>
+		    <a class="nav-link" href="../about/about.html">About</a>
 		  </li>
 		  <li class="nav-item active">
-		    <a class="nav-link" href="/contact/contact.html">Contact</a>
+		    <a class="nav-link" href="../contact/contact.html">Contact</a>
 		  </li>		  
         </ul>
       </div>	  
