--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <head>
     <title>Fegan Data Systems</title>
 	<meta charset="UTF-8">
-	<link rel="shortcut icon" type="image/png" href="/common/favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="../common/favicon.png"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="/common/style.css"/>
-	<link rel="stylesheet" href="/common/slideshow.css"/>
-	<link rel="stylesheet" href="/index.css"/>
+	<link rel="stylesheet" href="../common/style.css"/>
+	<link rel="stylesheet" href="../common/slideshow.css"/>
+	<link rel="stylesheet" href="../index.css"/>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 	<script type="text/javascript">
 	  $(document).ready(function(){
-	    $("div#header").load('/common/header_home.html');
-		$("div#footer").load('/common/footer.html');
+	    $("div#header").load('../common/header_home.html');
+		$("div#footer").load('../common/footer.html');
 	  });
 	</script>
 	
@@ -33,33 +33,33 @@
 		    <a class="next" onclick="plusSlides(1)">&#10095;</a>      
 		    <div class="slideshow">
 		      <div class="pslides">
-		    	<img src="/img/img_0.jpg" alt="Wesley Fegan sitting with his Sun workstation.">
+		    	<img src="img/img_0.jpg" alt="Wesley Fegan sitting with his Sun workstation.">
 		      </div>		
 		      <div class="pslides">
-		    	<img src="/img/img_1.jpg" alt="The desk of Wesley Fegan.">
+		    	<img src="img/img_1.jpg" alt="The desk of Wesley Fegan.">
 		      </div>
 		      <div class="pslides">
-		    	<img src="/img/img_2.jpg" alt="A nice interior shot of a home featuring a wooden bookshelf and a 90s PC.">
+		    	<img src="img/img_2.jpg" alt="A nice interior shot of a home featuring a wooden bookshelf and a 90s PC.">
 		      </div>
 		      <div class="pslides">
-		    	<img src="/img/img_3.jpg" alt="A nice interior shot of a home office featuring a 90s PC and a cowprint office chair.">
+		    	<img src="img/img_3.jpg" alt="A nice interior shot of a home office featuring a 90s PC and a cowprint office chair.">
 		      </div>
 		      <div class="pslides">
-		    	<img src="/img/img_4.jpg" alt="A home theater 'nook' inspired after 1970s space age design.">
+		    	<img src="img/img_4.jpg" alt="A home theater 'nook' inspired after 1970s space age design.">
 		      </div>
 		      <div class="pslides">
-		    	<img src="/img/img_5.jpg" alt="A home theater 'nook' inspired after 1970s space age design.">
+		    	<img src="img/img_5.jpg" alt="A home theater 'nook' inspired after 1970s space age design.">
 		      </div>
 		      <div class="pslides">
-		    	<img src="/img/img_6.jpg" alt="A home office featuring a particularly ugly looking early IBM flat panel display.">
+		    	<img src="img/img_6.jpg" alt="A home office featuring a particularly ugly looking early IBM flat panel display.">
 		      </div>
 		      <div class="pslides">
-		    	<img src="/img/img_7.jpg" alt="A 1990s home office built for two. Two workspaces are bisected by a shared desk. The wall features a nice hifi system.">
+		    	<img src="img/img_7.jpg" alt="A 1990s home office built for two. Two workspaces are bisected by a shared desk. The wall features a nice hifi system.">
 		      </div>	  
 		    </div>
       </div>
 		
-		  <script src="/common/slideshow.js"></script>
+		  <script src="common/slideshow.js"></script>
 		
 	    <h4>Welcome to the Fegan Data Systems homepage!</h4>
 	    <p>
