--- a/software/conway/conway.html
+++ b/software/conway/conway.html
@@ -5,19 +5,19 @@
   <head>
     <title>Conway's Game of Life</title>
 	<meta charset="UTF-8">
-	<link rel="shortcut icon" type="image/png" href="/common/favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="../../common/favicon.png"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="/common/style.css"/>
-	<link rel="stylesheet" href="/common/slideshow.css">
-	<link rel="stylesheet" href="/software/conway/conway.css">
+	<link rel="stylesheet" href="../../common/style.css"/>
+	<link rel="stylesheet" href="../../common/slideshow.css">
+	<link rel="stylesheet" href="conway.css">
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 	<script type="text/javascript">
 	  $(document).ready(function(){
-	    $("div#header").load('/common/header.html');
-		$("div#footer").load('/common/footer.html');
+	    $("div#header").load('../../common/header.html');
+		$("div#footer").load('../../common/footer.html');
 	  });
 	</script>
   </head>
@@ -37,18 +37,18 @@
 		  <a class="next" onclick="plusSlides(1)">&#10095;</a>
       <div class="slideshow">	
 		    <div class="pslides">
-		  	<img src="/software/conway/img/img_0.jpg" alt="The main screen.">
+		  	<img src="img/img_0.jpg" alt="The main screen.">
 		    </div>
 		    <div class="pslides">
-		  	<img src="/software/conway/img/img_1.jpg" alt="The main screen.">
+		  	<img src="conway/img/img_1.jpg" alt="The main screen.">
 		    </div>
         <div class="pslides">
-		  	<img src="/software/conway/img/img_2.jpg" alt="The setup screen.">
+		  	<img src="conway/img/img_2.jpg" alt="The setup screen.">
 		    </div>
 		  </div>  
     </div>
 		
-		<script src="/common/slideshow.js"></script>		
+		<script src="../../common/slideshow.js"></script>		
 		<p>
 	      &nbsp;&nbsp;&nbsp;&nbsp;On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.	  
 	    </p>			
@@ -58,7 +58,7 @@
 		<div id="download">
 		  <h4>Download</h4>
 		  <hr>
-		  <a href="./bin/Conway.exe">Conway.exe</a>
+		  <a href="bin/Conway.exe">Conway.exe</a>
 		  <br>
 		  size: 2,038 Kb
 		  <br>
