--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <head>
     <title>Fegan Data Systems</title>
 	<meta charset="UTF-8">
-	<link rel="shortcut icon" type="image/png" href="../common/favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="common/favicon.png"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="../common/style.css"/>
-	<link rel="stylesheet" href="../common/slideshow.css"/>
-	<link rel="stylesheet" href="../index.css"/>
+	<link rel="stylesheet" href="common/style.css"/>
+	<link rel="stylesheet" href="common/slideshow.css"/>
+	<link rel="stylesheet" href="index.css"/>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 	<script type="text/javascript">
 	  $(document).ready(function(){
-	    $("div#header").load('../common/header_home.html');
-		$("div#footer").load('../common/footer.html');
+	    $("div#header").load('common/header_home.html');
+		$("div#footer").load('common/footer.html');
 	  });
 	</script>
 	
