--- a/software/conway/conway.html
+++ b/software/conway/conway.html
@@ -40,10 +40,10 @@
 		  	<img src="img/img_0.jpg" alt="The main screen.">
 		    </div>
 		    <div class="pslides">
-		  	<img src="conway/img/img_1.jpg" alt="The main screen.">
+		  	<img src="img/img_1.jpg" alt="The main screen.">
 		    </div>
         <div class="pslides">
-		  	<img src="conway/img/img_2.jpg" alt="The setup screen.">
+		  	<img src="img/img_2.jpg" alt="The setup screen.">
 		    </div>
 		  </div>  
     </div>
