--- a/software/conway/conway.html
+++ b/software/conway/conway.html
@@ -37,13 +37,13 @@
 		  <a class="next" onclick="plusSlides(1)">&#10095;</a>
       <div class="slideshow">	
 		    <div class="pslides">
-		  	<img src="img/img_0.jpg" alt="The main screen.">
+		  	<img src="img/img_0.JPG" alt="The main screen.">
 		    </div>
 		    <div class="pslides">
-		  	<img src="img/img_1.jpg" alt="The main screen.">
+		  	<img src="img/img_1.JPG" alt="The main screen.">
 		    </div>
         <div class="pslides">
-		  	<img src="img/img_2.jpg" alt="The setup screen.">
+		  	<img src="img/img_2.JPG" alt="The setup screen.">
 		    </div>
 		  </div>  
     </div>
